--- a/week2/1.md
+++ b/week2/1.md
@@ -1,8 +1,6 @@
 week2: 線形回帰 - 多変量線形回帰1
 ## 複数フィーチャーの場合
-![スクリーンショット 2016-07-02 2.28.44.png](https://qiita-image-store.s3.amazonaws.com/0/69988/02fe00da-654a-2d5d-a69a-44440eeff256.png "スクリーンショット 2016-07-02 2.28.44.png")
-
-![スクリーンショット 2016-07-02 2.28.44.png](images/2016-07-02 2.28.44.png)
+![スクリーンショット 2016-07-02 2.28.44.png](https://cloud.githubusercontent.com/assets/6447085/16542181/a829b936-40d9-11e6-91df-3f7171417dee.png)
 
 
 フィーチャーが複数ある場合、仮説の係数を$\theta_0, \theta_1, ...$と表記する代わりにベクトル形式でまとめて表記します。
