--- a/week2/1.md
+++ b/week2/1.md
@@ -1,9 +1,9 @@
 week2: 線形回帰 - 多変量線形回帰1
 ## 複数フィーチャーの場合
-![スクリーンショット 2016-07-02 2.28.44.png](https://cloud.githubusercontent.com/assets/6447085/16542181/a829b936-40d9-11e6-91df-3f7171417dee.png)
+<img width="719" alt="2016-07-02 4 35 02" src="https://cloud.githubusercontent.com/assets/6447085/16542181/a829b936-40d9-11e6-91df-3f7171417dee.png">
 
 
-フィーチャーが複数ある場合、仮説の係数を$\theta_0, \theta_1, ...$と表記する代わりにベクトル形式でまとめて表記します。
+フィーチャーが複数ある場合、仮説の係数を $\theta_0, \theta_1, ...$ と表記する代わりにベクトル形式でまとめて表記します。
 $$
 \theta = \left[
     \begin{array}{rrr}
@@ -15,10 +15,18 @@ $$
   \right]
 \
 $$
-$ m $ => データ量
-$ n $ => フィーチャー数
-$ x $ => n次元ベクトル <= $ \mathbb{R}^n $ ($\mathbb{R}$は実数の集合)
-$ x^{(i)} $ => 表のi行目 (例 $ x^{(2)} = \left[
+
+$m$ => データ量
+
+$n$ => フィーチャー数
+
+$x$ => $n$次元ベクトル <= $\mathbb{R}^n$ ($\mathbb{R}$ は実数の集合)
+
+$x^{(i)}$ => 表のi行目
+
+例
+$$
+x^{(2)} = \left[
     \begin{array}{rrr}
       1416 \\
       3 \\
@@ -26,12 +34,14 @@ $ x^{(i)} $ => 表のi行目 (例 $ x^{(2)} = \left[
       40
     \end{array}
   \right]
-\$)
-$ x^{(i)}_j $ => i行j列目のフィーチャー ($ x^{(2)}_3 = 2 $)
+\
+$$
 
-![スクリーンショット 2016-07-02 4.35.02.png](https://qiita-image-store.s3.amazonaws.com/0/69988/51fc775f-7ba0-a56d-d662-d8d87ce6fbd6.png "スクリーンショット 2016-07-02 4.35.02.png")
+$x^{(i)}_j$ => i行j列目のフィーチャー ($x^{(2)}_3 = 2$)
 
-![スクリーンショット 2016-07-02 5.39.33.png](https://qiita-image-store.s3.amazonaws.com/0/69988/e18e2637-669b-f4c7-c267-5812614ddbc5.png "スクリーンショット 2016-07-02 5.39.33.png")
+<img width="719" style="margin-bottom:10px;" alt="2016-07-02 4 35 02" src="https://cloud.githubusercontent.com/assets/6447085/16542194/19ae31f4-40da-11e6-9e21-f5bc6bf90ee4.png">
+
+<img width="722" alt="2016-07-02 5 39 33" src="https://cloud.githubusercontent.com/assets/6447085/16542316/a5447120-40de-11e6-83fe-05c715125d35.png">
 
 フィーチャーが複数の場合の仮説
 $$
@@ -45,10 +55,11 @@ $$
 ここで慣習的に$ x_0 = 1 $と定義すると上の仮説は以下のように書くことができます。
 $$
 h_\theta(x) = \theta_0x_0 + \theta_1x_1 + \theta_2x_2 + ... + \theta_nx_n
-$$$$
+$$
+$$
 h_\theta(x) = \theta^TX
 $$
-$\theta^T$は$\theta$の転置行列です。つまりn+1行1列行列とn+1次元ベクトルとの内積として仮説をコンパクトに書き直したものになります。これは単純に仮説の数式を短く表したもので特別な操作をしているわけではありません。
+$\theta^T$ は $\theta$の転置行列です。つまりn+1行1列行列とn+1次元ベクトルとの内積として仮説をコンパクトに書き直したものになります。これは単純に仮説の数式を短く表したもので特別な操作をしているわけではありません。
 
 
 #### おまけ
@@ -59,9 +70,7 @@ X = \left[
       x_0 \\
       x_1 \\
       x_2 \\
-      . \\
-      . \\
-      . \\
+      : \\
       x_n
     \end{array}
   \right]
@@ -72,10 +81,8 @@ $$
 \theta = \left[
     \begin{array}{rrr}
       \theta_0 \\
-A      \theta_2 \\
-      . \\
-      . \\
-      . \\
+      \theta_2 \\
+      : \\
       \theta_n
     \end{array}
   \right]
